# minutes-tui

./: README.md  pyproject.toml
src/minutes/: minutes.css  minutes.py
